# c_cpp_shared_lib

./: .gitignore  Readme.md  clean.sh  compile-with-cmake.sh  compile.sh  compileOpenCV.sh  foo.c  foo.h
src/: CMakeLists.txt  foo.c  foo.cpp  foo.h  main.c
srcOpenCV/: CMakeLists.txt  foo_opencv.cpp  foo_opencv.h  main.c
